@@ -1,34 +1,35 @@
-Welcome to Dungeon.			This version created 11-MAR-91.
-You are in an open field west of a big white house with a boarded
-front door.
-There is a small mailbox here.
->You are in an open field west of a big white house with a boarded
-front door.
-There is a small mailbox here.
->You are in an open field west of a big white house with a boarded
-front door.
-There is a small mailbox here.
->You are in a forest, with trees in all directions around you.
->You are in a forest, with trees in all directions around you.
->You are in a forest, with trees in all directions around you.
->You are in a dimly lit forest, with large trees all around.  One
-particularly large tree with some low branches stands here.
->You are about ten feet above the ground nestled among some large
-branches.  The nearest branch above you is beyond your reach.
-On the branch is a small birds nest.
-The birds nest contains:
-  A jewel-encrusted egg.
->Taken.
->You are in a dimly lit forest, with large trees all around.  One
-particularly large tree with some low branches stands here.
->You are in a clearing, with a forest surrounding you on the west
-and south.
-There is a pile of leaves on the ground.
->Done.
-A grating appears on the ground.
->You are in a clearing, with a forest surrounding you on the west
-and south.
-There is a grating securely fastened into the ground.
-There is a pile of leaves on the ground.
->I don't understand that.
->
+ Welcome to Dungeon.   This version created 11-FEB-87.
+ You are in an open field west of a big white house with a boarded
+ front door.
+ There is a small mailbox here.
+ > You are in an open field west of a big white house with a boarded
+ front door.
+ There is a small mailbox here.
+ > You are in an open field west of a big white house with a boarded
+ front door.
+ There is a small mailbox here.
+ > You are in a forest, with trees in all directions around you.
+ > Forest
+ > Forest
+ > You are in a dimly lit forest, with large trees all around.  One
+ particularly large tree with some low branches stands here.
+ > You are about ten feet above the ground nestled among some large
+ branches.  The nearest branch above you is beyond your reach.
+ On the branch is a small birds nest.
+ The birds nest contains:
+   A jewel-encrusted egg.
+ > Taken.
+ > Forest
+ > You are in a clearing, with a forest surrounding you on the west
+ and south.
+ There is a pile of leaves on the ground.
+ > Done.
+ A grating appears on the ground.
+ > You are in a clearing, with a forest surrounding you on the west
+ and south.
+ There is a grating securely fastened into the ground.
+ There is a pile of leaves on the ground.
+ > I don't understand that.
+ > Your score would be   5 [total of 585 points], in   14 moves.
+ This gives you the rank of Beginner.
+ Do you wish to leave the game?
