@@ -11,3 +11,5 @@ e
 move leaves
 l
 use leaf blower on leaves
+quit
+yes
